--- a/website_code/page_2.html
+++ b/website_code/page_2.html
@@ -2,10 +2,162 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Vulture Bot - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="icon" type="image/png" href="logo.png">
+
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: Arial, sans-serif;
+            /* fun gradient bg */
+            background: linear-gradient(135deg, #a18cd1, #fbc2eb);
+            min-height: 100vh;
+            color: #222;
+        }
+
+        /* Colorful navbar */
+        nav {
+            background: linear-gradient(90deg, #4a00e0, #8e2de2);
+            padding: 10px 0;
+            position: sticky;
+            top: 0;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+        }
+        .nav-inner {
+            max-width: 900px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 25px;
+        }
+        .nav-logo {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-right: 10px;
+        }
+        .nav-logo img {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+        }
+        .nav-logo span {
+            color: #fff;
+            font-weight: bold;
+            font-size: 16px;
+        }
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            padding: 6px 12px;
+            border-radius: 20px;
+            font-size: 14px;
+            transition: background 0.2s, transform 0.2s;
+        }
+        .nav-links a:hover {
+            background: rgba(255,255,255,0.2);
+            transform: translateY(-1px);
+        }
+        .nav-links .active {
+            background: #ff9a76;
+            color: #222;
+        }
+
+        /* Page content */
+        .container {
+            max-width: 900px;
+            margin: 30px auto;
+            padding: 0 15px 40px;
+        }
+        h1 {
+            font-size: 30px;
+            margin-bottom: 10px;
+            color: #2b1055;
+        }
+        h2 {
+            font-size: 22px;
+            margin: 20px 0 10px;
+            color: #4a00e0;
+        }
+        h3 {
+            margin-top: 15px;
+            margin-bottom: 8px;
+            color: #8e2de2;
+        }
+        p {
+            margin-bottom: 10px;
+            line-height: 1.6;
+        }
+        .box {
+            background: rgba(255,255,255,0.95);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 14px rgba(0,0,0,0.15);
+            margin-top: 15px;
+        }
+        ul { margin-left: 18px; margin-top: 6px; }
+        ul li { margin-bottom: 6px; }
+    </style>
 </head>
 <body>
-    
+
+    <!-- Colorful navbar -->
+    <nav>
+        <div class="nav-inner">
+            <div class="nav-logo">
+                <img src="logo.png" alt="Vulture Bot logo">
+                <span>Vulture Bot</span>
+            </div>
+            <div class="nav-links">
+                <a href="index.html" class="active">Home</a>
+                <a href="result.html">Result</a>
+                <a href="contact.html">Contact</a>
+                <a href="feedback.html">Feedback</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Home content -->
+    <div class="container">
+        <h1>Vulture Bot</h1>
+        <p>Circuit for Nature – a project to support nature’s cleaners using simple robotics.</p>
+
+        <div class="box">
+            <h2>Problem Statement</h2>
+
+            <h3>The vulture crisis</h3>
+            <p>
+                Vultures are important decomposers. When animals die, vultures help clean up the carcasses
+                and reduce the spread of disease.
+            </p>
+            <p>
+                In many areas, vulture populations are dropping because of habitat loss, poisoning, and
+                human activity. This means carcasses stay longer in the open and can become a health risk
+                for other animals and people.
+            </p>
+
+            <h3>Our idea: Vulture Bot</h3>
+            <p>
+                Vulture Bot is a small robot that tries to copy part of the vulture’s job in a simple,
+                controlled way. It focuses on detecting dead animals and helping handle them more safely.
+            </p>
+            <p>
+                The goal is not to replace real vultures but to explore how technology can support public
+                health and the environment when a key species is in danger.
+            </p>
+
+            <h3>Objectives</h3>
+            <ul>
+                <li>Detect carcasses using basic computer vision (YOLO-style models).</li>
+                <li>Move towards the carcass using a Raspberry Pi based control system.</li>
+                <li>Use a small arm or scoop to interact with the carcass area.</li>
+                <li>Test simple methods to reduce smell and exposure safely.</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
