--- a/website_code/feedback.html
+++ b/website_code/feedback.html
@@ -119,7 +119,7 @@
                 <span>Vulture Bot</span>
             </div>
             <div class="nav-links">
-                <a href="index.html">Home</a>
+                <a href="page_2.html">Home</a>
                 <a href="result.html">Result</a>
                 <a href="contact.html">Contact</a>
                 <a href="feedback.html" class="active">Feedback</a>
