--- a/website_code/page_1.html
+++ b/website_code/page_1.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             height: 100vh;
             /* change this to your background image */
-            background: url("background.png") no-repeat center center fixed;
+            background: url("image.png") no-repeat center center fixed;
             background-size: cover;
             
             display: flex;
