--- a/website_code/contact.html
+++ b/website_code/contact.html
@@ -10,13 +10,12 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
         font-family: Arial, sans-serif;
-        background: url("image.png") center/cover no-repeat fixed; /* background image */
+        background: url("image.png") center/cover no-repeat fixed;
         color: #e5f5df;
         min-height: 100vh;
         }
 
 
-        /* Navbar - same theme */
         nav {
             position: fixed;
             top: 0;
@@ -67,7 +66,6 @@
             color: #052e16;
         }
 
-        /* Page layout */
         .container {
             max-width: 900px;
             margin: 80px auto 40px;
@@ -92,21 +90,19 @@
         }
 
         .card {
-            background: #020617;          /* almost black card */
+            background: #020617;
             border-radius: 12px;
             padding: 24px;
             box-shadow: 0 4px 18px rgba(0,0,0,0.9);
-            border: 1px solid #14532d;    /* dark green border */
+            border: 1px solid #14532d;
             margin-top: 15px;
         }
 
-        /* Contact info */
         .contact-info p span {
-            color: #a16207;  /* brown accent labels */
+            color: #a16207;
             font-weight: 600;
         }
 
-        /* FAQ accordion using <details> */
         .faq {
             margin-top: 20px;
         }
@@ -146,7 +142,6 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav>
         <div class="nav-inner">
             <div class="nav-logo">
@@ -162,7 +157,6 @@
         </div>
     </nav>
 
-    <!-- Contact + FAQ content -->
     <div class="container">
         <h1>Contact & FAQ</h1>
 
