--- a/website_code/page_2.html
+++ b/website_code/page_2.html
@@ -10,7 +10,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
         font-family: Arial, sans-serif;
-        background: #000; /* fallback behind hero */
+        background: #000;
         color: #dfe9dc;
     }
 
@@ -19,7 +19,7 @@
         top: 0;
         width: 100%;
         z-index: 10;
-        background: linear-gradient(90deg, #14532d, #422006); /* dark green → dark brown */
+        background: linear-gradient(90deg, #14532d, #422006);
         padding: 10px 0;
         box-shadow: 0 2px 8px rgba(0,0,0,0.6);
     }
@@ -43,7 +43,7 @@
         border-radius: 50%;
     }
     .nav-logo span {
-        color: #e5f5df; /* pale green */
+        color: #e5f5df;
         font-weight: bold;
         font-size: 16px;
     }
@@ -60,11 +60,10 @@
         transform: translateY(-1px);
     }
     .nav-links .active {
-        background: #22c55e; /* bright leaf green */
+        background: #22c55e;
         color: #052e16;
     }
 
-    /* Hero with your image (unchanged except text colors) */
     .hero {
         height: 100vh;
         background: url("image.png") center/cover no-repeat;
@@ -93,46 +92,44 @@
         font-size: 16px;
     }
 
-    /* Info section: black background card, green–brown text */
     .container {
         max-width: 900px;
         margin: 30px auto 40px;
         padding: 0 15px 40px;
     }
     .box {
-        background: #020617;          /* almost black behind data */
+        background: #020617;
         border-radius: 12px;
         padding: 20px;
         box-shadow: 0 4px 18px rgba(0,0,0,0.9);
         margin-top: 15px;
-        border: 1px solid #14532d;    /* dark green border */
+        border: 1px solid #14532d;
     }
     h2 {
         font-size: 22px;
         margin: 20px 0 10px;
-        color: #bbf7d0;               /* soft light green */
+        color: #bbf7d0;
     }
     h3 {
         margin-top: 15px;
         margin-bottom: 8px;
-        color: #a16207;               /* earthy brown-gold */
+        color: #a16207;
     }
     p {
         margin-bottom: 10px;
         line-height: 1.6;
-        color: #e5f5df;               /* light greenish text */
+        color: #e5f5df;
     }
     ul { margin-left: 18px; margin-top: 6px; }
     ul li {
         margin-bottom: 6px;
-        color: #d1fae5;               /* slightly brighter green */
+        color: #d1fae5;
     }
 </style>
 
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav>
         <div class="nav-inner">
             <div class="nav-logo">
@@ -140,7 +137,7 @@
                 <span>Vulture Bot</span>
             </div>
             <div class="nav-links">
-                <a href="index.html" class="active">Home</a>
+                <a href="page_2.html" class="active">Home</a>
                 <a href="result.html">Result</a>
                 <a href="contact.html">Contact</a>
                 <a href="feedback.html">Feedback</a>
@@ -148,7 +145,6 @@
         </div>
     </nav>
 
-    <!-- First screen: your image -->
     <section class="hero">
         <div class="hero-overlay">
             <div class="hero-text">
@@ -158,7 +154,6 @@
         </div>
     </section>
 
-    <!-- Scroll down: information -->
     <div class="container">
         <div class="box">
             <h2>Problem Statement</h2>
