--- a/website_code/result.html
+++ b/website_code/result.html
@@ -14,7 +14,6 @@
             color: #222;
         }
 
-        /* Navbar (same on all pages) */
         nav {
             position: fixed;
             top: 0;
@@ -22,7 +21,7 @@
             z-index: 10;
             background: linear-gradient(90deg, #4a00e0, #8e2de2);
             padding: 10px 0;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+           box-shadow: 0 2px 8px rgba(0,0,0,0.25);
         }
         .nav-inner {
             max-width: 900px;
@@ -65,13 +64,12 @@
             color: #222;
         }
 
-        /* Full-screen hero with your image */
         .hero {
             height: 100vh;
             background: url("image.png") center/cover no-repeat;
             display: flex;
             align-items: center;
-            padding-top: 60px; /* space for navbar */
+            padding-top: 60px;
         }
         .hero-overlay {
             background: rgba(0,0,0,0.25);
@@ -94,7 +92,6 @@
             font-size: 16px;
         }
 
-        /* Info section below hero */
         .container {
             max-width: 900px;
             margin: 30px auto 40px;
@@ -127,7 +124,6 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav>
         <div class="nav-inner">
             <div class="nav-logo">
@@ -143,7 +139,6 @@
         </div>
     </nav>
 
-    <!-- First screen: your image -->
     <section class="hero">
         <div class="hero-overlay">
             <div class="hero-text">
@@ -153,7 +148,6 @@
         </div>
     </section>
 
-    <!-- Scroll down: information -->
     <div class="container">
         <div class="box">
             <h2>Problem Statement</h2>
